--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "scripts": {
     "tests": "jest --watchAll",
     "start": "webpack && webpack-dev-server"
-
   },
-
   "author": "jacob ruleaux",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
